[workspace]
members = [
    "crates/remote-steer-core",
    "crates/remote-steer-transport",
    "crates/remote-steer-backend-linux",
    "crates/remote-steer-backend-windows",
    "crates/remote-steer-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/smturtle2/remote-steer"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive", "env"] }
input-linux = "0.7.1"
libc = "0.2"
remote-steer-backend-linux = { path = "crates/remote-steer-backend-linux" }
remote-steer-backend-windows = { path = "crates/remote-steer-backend-windows" }
remote-steer-core = { path = "crates/remote-steer-core" }
remote-steer-transport = { path = "crates/remote-steer-transport" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
windows = "0.62.2"
