[package]
name = "remote-steer-backend-linux"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
remote-steer-core.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
input-linux.workspace = true
libc.workspace = true
tracing.workspace = true
