[package]
name = "remote-steer"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
remote-steer-backend-linux.workspace = true
remote-steer-backend-windows.workspace = true
remote-steer-core.workspace = true
remote-steer-transport.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "remote-steer"
path = "src/main.rs"
