[package]
name = "remote-steer-transport"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bincode.workspace = true
blake3.workspace = true
remote-steer-core.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
